price interval check
